--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 clean/data/*
+clean/models/dmodel 768 dff 3072 nheads 12 nlayers 12 dropout 0.1 epochs 100 seqlen 2048 batch 4 date 20230329-011944.h5
+clean/models/params80Mdata78Mseqlen2048.h5
